s4-workshop-windows-fixed-v5_1/manifests/20-front-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: nginxdemos/hello:plain-text
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: workshop
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: http
