s4-workshop-windows-fixed-v5_1/manifests/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  tls:
    - hosts:
        - workshop.local
      secretName: web-tls
  rules:
    - host: workshop.local
      http:
        paths:
          - path: /front(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: front
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 80
